--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>S1 - Lecture 2 - Example 4</title>
+		<title>GALERY</title>
 	</head>
 	<body>
-        <h1>This is an example of several ways to embed content from other sources</h1>
+        <h1>IAAC-Cloud-Based-Management</h1>
         <!-- We can embed content from another with several different html elements -->
         <!-- Here is a decent comparison -->
         <!-- https://stackoverflow.com/a/21115112/2179399 -->
-        <h2>iframe element</h2>
-        <iframe src="../example1/" width="500" height="500"></iframe>
-        <h2>embed element</h2>
-        <embed src="../example2/" width="500" height="500"></embed>
+        <h2>LECTURE 01</h2>
+        <iframe src="lecture1\example1\index.html" width="500" height="500"></iframe>
+        <h2>LETURE 02</h2>
+        <embed src="lecture1\example2\index.html" width="500" height="500"></embed>
 	</body>
 </html>
