--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         <h2>LECTURE 01</h2>
         <iframe src="lecture1\example1\index.html" width="500" height="500"></iframe>
         <h2>LETURE 02</h2>
+        <embed src="lecture2\example3\index.html" width="500" height="500"></embed>
+        <h2>LETURE 03</h2>
+        <embed src="lecture3\example2\index.html" width="500" height="500"></embed>
+        <h2>LETURE 04</h2>
         <embed src="lecture1\example2\index.html" width="500" height="500"></embed>
 	</body>
 </html>
