--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
         <!-- We can embed content from another with several different html elements -->
         <!-- Here is a decent comparison -->
         <!-- https://stackoverflow.com/a/21115112/2179399 -->
-        <h2>LECTURE 01</h2>
-        <iframe src="lecture1\example1\index.html" width="500" height="500"></iframe>
-        <h2>LETURE 02</h2>
-        <embed src="lecture2\example3\index.html" width="500" height="500"></embed>
-        <h2>LETURE 03</h2>
-        <embed src="lecture3\example2\index.html" width="500" height="500"></embed>
-        <h2>LETURE 04</h2>
-        <embed src="lecture1\example2\index.html" width="500" height="500"></embed>
+        <h2>LECTURE 01 - CURIOUS? </h2>
+        <iframe src="https://jonathan955.github.io/lecture1/example1/" width="500" height="500"></iframe>
+        <h2>LETURE 02 - GROWTH TYPOLOGY </h2>
+        <embed src="https://jonathan955.github.io/lecture2/example3/" width="500" height="500"></embed>
+        <h2>LETURE 03- TOWER V.01 </h2>
+        <embed src="https://jonathan955.github.io/lecture3/" width="500" height="500"></embed>
+        <h2>APP SERVER - TOWER V.02 </h2>
+        <embed src="https://jonathan955.github.io/lecture3/" width="500" height="500"></embed>
+        <h2>FINAL PROJECT - MOON SETTLEMENT / Aggregation growth</h2>
+        <embed src="https://jonathan955.github.io/lecture3/example2/" width="500" height="500"></embed>
 	</body>
 </html>
