--- a/index.html
+++ b/index.html
@@ -2,22 +2,128 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>GALERY</title>
+		<title>MACAD PROJECT GALLERY</title>
+
 	</head>
 	<body>
-        <h1>IAAC-Cloud-Based-Management</h1>
+
+        <h1>Projects for Digital Tools for Cloud-based Data Management</h1>
         <!-- We can embed content from another with several different html elements -->
         <!-- Here is a decent comparison -->
         <!-- https://stackoverflow.com/a/21115112/2179399 -->
-        <h2>LECTURE 01 - CURIOUS? </h2>
-        <iframe src="https://jonathan955.github.io/lecture1/example1/" width="500" height="500"></iframe>
-        <h2>LETURE 02 - GROWTH TYPOLOGY </h2>
-        <embed src="https://jonathan955.github.io/lecture2/example3/" width="500" height="500"></embed>
-        <h2>LETURE 03- TOWER V.01 </h2>
-        <embed src="https://jonathan955.github.io/lecture3/" width="500" height="500"></embed>
-        <h2>APP SERVER - TOWER V.02 </h2>
-        <embed src="https://jonathan955.github.io/lecture3/" width="500" height="500"></embed>
-        <h2>FINAL PROJECT - MOON SETTLEMENT / Aggregation growth</h2>
-        <embed src="https://jonathan955.github.io/lecture3/example2/" width="500" height="500"></embed>
-	</body>
+        <div class="row">
+            <div class="column">
+                <div class="content">
+                <h2>FINAL PROJECT </h2>
+                <embed src="https://appserverunicorndata.herokuapp.com/examples/Final%20project/" style="height:90%; width:100%" ></embed>
+                <a href="https://github.com/Jonathan955/IAAC-Cloud-Based-Management-.git">See GitHub repository</a>
+                <a href="https://appserveraj.herokuapp.com/examples/truss/">Go to the Website</a>
+                </div>
+            </div>
+            <div class="column">
+                <div class="content">
+                <h2> ASSIGMENT 01 - Curious? </h2>
+                <embed src="https://jonathan955.github.io/lecture1/example1/" style="height:90%; width:100%"></embed>
+                <a href="https://github.com/Jonathan955/lecture1.git">See GitHub repository</a>
+                <a href="https://jonathan955.github.io/lecture1/example1/">Go to the Website</a>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="column">
+                <div class="content">
+                 <h2> ASSIGMENT 02 - Growth typology </h2>
+                 <iframe src="https://jonathan955.github.io/lecture2/example3/" style="height:90%; width:100%"></iframe>
+                 <a href="https://github.com/Jonathan955/lecture2.git">See GitHub repository</a>
+                 <a href="https://jonathan955.github.io/lecture2/example3/">Go to the Website</a>
+                </div>
+            </div>
+            <div class="column">
+                <div class="content">
+                <h2> ASSIGMENT 03 - Tower V.01</h2>
+                <iframe src=" https://jonathan955.github.io/lecture3/example2/" style="height:90%; width:100%"></iframe>
+                <a href="https://github.com/Jonathan955/lecture3.git ">See GitHub repository</a>     
+                <a href="https://jonathan955.github.io/lecture3/example2/">Go to the Website</a>  
+                </div>
+            </div>
+        </div>
+        <div class="row">
+                <div class="column">
+                    <div class="content">
+                    <h2>APP SERVER - Tower V.02 </h2>
+                    <embed src="https://appserverunicorndata.herokuapp.com/view/Tower.gh" style="height:90%; width:100%" ></embed>
+                    <a href="https://github.com/Jonathan955/compute.rhino3d.appserver.git">See GitHub repository</a>
+                    <a href="https://appserverunicorndata.herokuapp.com/view/Tower.gh">Go to the Website</a>
+                    </div>               
+                </div>
+            </div>
+
+    </body>
 </html>
+
+<style>
+* {
+    box-sizing: border-box;
+  }
+  
+  body {
+    background-color: #f1f1f1;
+    padding: 15px;
+    font-family: monospace;
+  }
+  
+  /* Center website */
+  .main {
+    max-width: 1000px;
+    margin: auto;
+  }
+  
+  h1 {
+    font-size: 20px;
+    word-break: break-all;
+  }
+  
+  .row {
+    margin: 8px -16px;
+  }
+  
+  /* Add padding BETWEEN each column (if you want) */
+  .row,
+  .row > .column {
+    padding: 8px;
+  }
+  
+  /* Create four equal columns that floats next to each other */
+  .column {
+    float: left;
+    width: 50%;
+  }
+  
+  /* Clear floats after rows */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  
+  /* Content */
+  .content {
+    background-color: white;
+    padding: 10px;
+    height: 1000px;
+  }
+  
+  /* Responsive layout - makes a two column-layout instead of four columns */
+  @media screen and (max-width: 900px) {
+    .column {
+      width: 50%;
+    }
+  }
+  
+  /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+  @media screen and (max-width: 600px) {
+    .column {
+      width: 100%;
+    }
+  }
+</style>
