--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
         <!-- We can embed content from another with several different html elements -->
         <!-- Here is a decent comparison -->
         <!-- https://stackoverflow.com/a/21115112/2179399 -->
-        <div class="row">
-            <div class="column">
                 <div class="content">
                 <h2>FINAL PROJECT </h2>
                 <embed src="https://appserverunicorndata.herokuapp.com/examples/Final%20project/" style="height:90%; width:100%" ></embed>
@@ -20,7 +18,6 @@
                 <a href="https://appserveraj.herokuapp.com/examples/truss/">Go to the Website</a>
                 </div>
             </div>
-            <div class="column">
                 <div class="content">
                 <h2> ASSIGMENT 01 - Curious? </h2>
                 <embed src="https://jonathan955.github.io/lecture1/example1/" style="height:90%; width:100%"></embed>
@@ -30,7 +27,6 @@
             </div>
         </div>
         <div class="row">
-            <div class="column">
                 <div class="content">
                  <h2> ASSIGMENT 02 - Growth typology </h2>
                  <iframe src="https://jonathan955.github.io/lecture2/example3/" style="height:90%; width:100%"></iframe>
@@ -38,7 +34,6 @@
                  <a href="https://jonathan955.github.io/lecture2/example3/">Go to the Website</a>
                 </div>
             </div>
-            <div class="column">
                 <div class="content">
                 <h2> ASSIGMENT 03 - Tower V.01</h2>
                 <iframe src=" https://jonathan955.github.io/lecture3/example2/" style="height:90%; width:100%"></iframe>
@@ -47,7 +42,6 @@
                 </div>
             </div>
         </div>
-        <div class="row">
                 <div class="column">
                     <div class="content">
                     <h2>APP SERVER - Tower V.02 </h2>
@@ -67,7 +61,7 @@
   }
   
   body {
-    background-color: #f1f1f1;
+    background-color: #ffffff;
     padding: 15px;
     font-family: monospace;
   }
