--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	</head>
 	<body>
 
+        <h2>MaCAD - Master in Advanced Computation for Architecture & Design </h2>
         <h1>Projects for Digital Tools for Cloud-based Data Management</h1>
         <!-- We can embed content from another with several different html elements -->
         <!-- Here is a decent comparison -->
