--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- Here is a decent comparison -->
         <!-- https://stackoverflow.com/a/21115112/2179399 -->
                 <div class="content">
-                <h2>FINAL PROJECT </h2>
+                <h2>MOON SETTLEMENT </h2>
                 <embed src="https://appserverunicorndata.herokuapp.com/examples/Final%20project/" style="height:90%; width:100%" ></embed>
                 <a href="https://github.com/Jonathan955/IAAC-Cloud-Based-Management-.git">See GitHub repository</a>
                 <a href="https://appserveraj.herokuapp.com/examples/truss/">Go to the Website</a>
