--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 	</head>
 	<body>
 
-        <h2>MaCAD - Master in Advanced Computation for Architecture & Design </h2>
-        <h1>Projects for Digital Tools for Cloud-based Data Management</h1>
+        <h1>MaCAD - Master in Advanced Computation for Architecture & Design </h1>
+        <h3>Projects for Digital Tools for Cloud-based Data Management</h3>
+
+        <h3>Jonathan Hernandez Lopez</h3>
+
         <!-- We can embed content from another with several different html elements -->
         <!-- Here is a decent comparison -->
         <!-- https://stackoverflow.com/a/21115112/2179399 -->
@@ -16,7 +19,7 @@
                 <h2>MOON SETTLEMENT </h2>
                 <embed src="https://appserverunicorndata.herokuapp.com/examples/Final%20project/" style="height:90%; width:100%" ></embed>
                 <a href="https://github.com/Jonathan955/IAAC-Cloud-Based-Management-.git">See GitHub repository</a>
-                <a href="https://appserveraj.herokuapp.com/examples/truss/">Go to the Website</a>
+                <a href="https://appserverunicorndata.herokuapp.com/examples/Final%20project/">Go to the Website</a>
                 </div>
             </div>
                 <div class="content">
