--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>MACAD PROJECT GALLERY</title>
+		<title>PROJECT GALLERY</title>
 
 	</head>
 	<body>
@@ -21,6 +21,10 @@
                 <a href="https://github.com/Jonathan955/IAAC-Cloud-Based-Management-.git">See GitHub repository</a>
                 <a href="https://appserverunicorndata.herokuapp.com/examples/Final%20project/">Go to the Website</a>
                 </div>
+           </div>
+                <h2> GRASSHOPPER PROJECT </h2>
+                <img src="PRESENTATION GIF.gif" class="test" /> 
+           </div>        
             </div>
                 <div class="content">
                 <h2> ASSIGMENT 01 - Curious? </h2>
