--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
                 <a href="https://github.com/Jonathan955/IAAC-Cloud-Based-Management-.git">See GitHub repository</a>
                 <a href="https://appserverunicorndata.herokuapp.com/examples/Final%20project/">Go to the Website</a>
                 </div>
-           </div>
+                <div class="content">
                 <h2> GRASSHOPPER PROJECT </h2>
                 <img src="PRESENTATION GIF.gif" class="test" /> 
-           </div>        
-            </div>
+                </div>        
                 <div class="content">
                 <h2> ASSIGMENT 01 - Curious? </h2>
                 <embed src="https://jonathan955.github.io/lecture1/example1/" style="height:90%; width:100%"></embed>
