--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a href="https://appserverunicorndata.herokuapp.com/examples/Final%20project/">Go to the Website</a>
                 </div>
                 <div class="content">
-                <h2> GRASSHOPPER PROJECT </h2>
+                <h2> MOON SETTLEMENT GRASSHOPPER </h2>
                 <img src="PRESENTATION GIF.gif" class="test" /> 
                 </div>        
                 <div class="content">
