--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
 
         <h1>MaCAD - Master in Advanced Computation for Architecture & Design </h1>
-        <h3>Projects for Digital Tools for Cloud-based Data Management</h3>
+        <h3>Projects Digital Tools for Cloud-based Data Management</h3>
 
         <h3>Jonathan Hernandez Lopez</h3>
 
